# sandbox

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.common  fem.files  fem.includes  readme.txt
data/: blue_path.samples  car_sky1.btg  cloud1.density  cloudscape02_max.FBX  cube01.FBX  cube01_ascii.FBX  cube01_maya.fbx  ez09.btg  mieplot_results1.mie  mieplot_results1_phasefun.txt  pickover_1.btg  test.btg
misc/: DOF.cpp  DOF.h  Domain.cpp  Domain.h  DomainIO.cpp  DomainIO.h  Element.cpp  Element.h  LinearSystem.cpp  LinearSystem.h  Material.h  MatrixNMf.cpp  MatrixNMf.h  Node.cpp  Node.h  Solver.cpp  Solver.h  Tetra4.cpp  Tetra4.h  main.cpp  vector2d.h
misc/gfx/: Attribute.cpp  Attribute.h  Camera.cpp  Camera.h  Clip.cpp  Clip.h  CurveGeometry.h  DebugNavigator.cpp  DebugNavigator.h  FBO.cpp  FBO.h  FCurve.cpp  FCurve.h  Geometry.cpp  Shader.cpp  Shader.h  ShotManager.cpp  ShotManager.h  Skeleton.cpp  Skeleton.h  TOP.cpp  TOP.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TransformManager.cpp  TransformManager.h  gfx.cpp  gfx.h
misc/gfx/backup/: Attribute.cpp  Camera.cpp  Camera.h  CurveGeometry.cpp  DebugNavigator.cpp  FBO.cpp  FBO.h  FCurve.cpp  FCurve.h  Geometry.h  Shader.cpp  Skeleton.cpp  Skeleton.h  Texture.cpp  Texture.h  gfx.cpp  gfx.h
misc/gfx/tops/: Blur1DTOP.cpp  Blur1DTOP.h  Blur1DTOP_horizontal.ps.glsl  Blur1DTOP_horizontal.ps.glsl.cpp  Blur1DTOP_vertical.ps.glsl  Blur1DTOP_vertical.ps.glsl.cpp  BlurTOP.cpp  BlurTOP.h  DOFBlur1DTOP.cpp  DOFBlur1DTOP.h  DOFBlur1DTOP_horizontal.ps.glsl  DOFBlur1DTOP_horizontal.ps.glsl.cpp  DOFBlur1DTOP_vertical.ps.glsl  DOFBlur1DTOP_vertical.ps.glsl.cpp  DOFBlurTOP.cpp  DOFBlurTOP.h  DOFCoCComputeTOP.cpp  DOFCoCComputeTOP.h  DOFCoCComputeTOP.ps.glsl  DOFCoCComputeTOP.ps.glsl.cpp  DOFCombineTOP.cpp  DOFCombineTOP.h  DOFCombineTOP.ps.glsl  DOFCombineTOP.ps.glsl.cpp  DOFTOP.cpp  DOFTOP.h  RenderTOP.cpp  RenderTOP.h  ResampleTOP.cpp  ResampleTOP.h  ResampleTOP.ps.glsl  ResampleTOP.ps.glsl.cpp  SSAOBlurTOP.cpp  SSAOBlurTOP.h  SSAOBlurTOP.ps.glsl  SSAOBlurTOP.ps.glsl.cpp  SSAOComputeTOP.cpp  SSAOComputeTOP.h  SSAOComputeTOP.ps.glsl  SSAOComputeTOP.ps.glsl.cpp  (+4 more)
misc/tetgen/: tetgen.h
src/: BtgBackground.cpp  BtgBackground.h  BtgBackground.ps.glsl  BtgBackground.vs.glsl  CameraOp.h  ColorGrading.cpp  ColorGrading.h  ColorGrading.ps.glsl  ColorGrading.ui  ColorGrading.ui.cpp  ColorGrading.ui.h  ColorGrading.vs.glsl  DemoOp.h  Main.h  Nebulae.billboardAtmo.ps.glsl  Nebulae.billboardAtmo.vs.glsl  Nebulae.billboardBokGlobule.ps.glsl  Nebulae.billboardBokGlobule.vs.glsl  Nebulae.billboardFlare.ps.glsl  Nebulae.billboardFlare.vs.glsl  Nebulae.color.ps.glsl  Nebulae.cpp  Nebulae.h  Nebulae.particles.vs.glsl  Nebulae.perlinnoise.ps.glsl  Nebulae.perlinnoise.vs.glsl  Nebulae.ui  Nebulae.ui.cpp  Nebulae.ui.h  OSCDispatcher.cpp  OSCDispatcher.h  ParticleCloud.cpp  ParticleCloud.h  ParticleCloud.sprite.ps.glsl  ParticleCloud.ui  ParticleCloud.ui.cpp  ParticleCloud.ui.h  SDF.cpp  SDF.h  SPH.cpp  (+79 more)
src/composer/widgets/CurveEditor/: AxisItem.cpp  AxisItem.h  CurveEditor.cpp  CurveEditor.h  CurveHandleItem.cpp  CurveHandleItem.h  CurveItem.cpp  CurveItem.h
src/composer/widgets/GLViewer/: GLThread.cpp  GLThread.h  GLViewer.cpp  GLViewer.h
src/composer/widgets/Trackball/: ProjectorItem.cpp  ProjectorItem.h  Trackball.cpp  Trackball.h
src/glsl/: cloud_sprites.ps.glsl  cloud_sprites.vs.glsl  defaultGeometry.ps.glsl  defaultGeometry.vs.glsl
src/ops/: CameraOp.h  DemoOp.h  FBXTransformOp.h  RenderGeoOp.h  TimeOp.h  TransformOp.h
